Day One, Part Two

--- a/Day-One/Day-One.Tests/Day-One.Tests.fsproj
+++ b/Day-One/Day-One.Tests/Day-One.Tests.fsproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
         <Compile Include="FuelCounterTests.fs" />
+        <Compile Include="TotalMassTests.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
